# vibra

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-ci.yaml  build-linux-amd64.yaml  build-linux-arm64.yaml  build-macos-amd64.yaml  build-macos-arm64.yaml  build-webassembly.yaml  build-windows-amd64.yaml  ci-code.yaml  ci-linux-amd64.yaml  ci-linux-arm64.yaml  ci-macos-amd64.yaml  ci-macos-arm64.yaml  ci-python.yaml  ci-webassembly.yaml  ci-windows-amd64.yaml  pages-live-demo.yaml
bindings/wasm/: Dockerfile  Makefile  build-wasm.sh  wasm.cpp
cli/: CMakeLists.txt  cli.cpp  cli.h  main.cpp
cli/communication/: shazam.cpp  shazam.h  timezones.h  user_agents.h
cli/utils/: uuid4.h
include/: vibra.h
js/: CMakeLists.txt  README.md  build-wasm.sh  package-lock.json  package.json  tsconfig.json
js/src/: cli.ts  index.ts  shazam.ts  signature.ts  vibra.d.ts  vibra.js  vibra.wasm
lib/: CMakeLists.txt  vibra.cpp
lib/algorithm/: frequency.cpp  frequency.h  signature.cpp  signature.h  signature_generator.cpp  signature_generator.h
lib/audio/: byte_control.h  downsampler.cpp  downsampler.h  wav.cpp  wav.h
lib/utils/: base64.h  crc32.h  ffmpeg.h  fft.h  hanning.h  ring_buffer.h
live-demo/: index.html
live-demo/public/: main.js
python/: README.md
python/src/vibra/: __init__.py  _api.py  _native.py  shazam.py
python/tests/: test_vibra.py
tests/: CMakeLists.txt  public_api_test.cpp
tests/algorithm/: frequency_test.cpp  signature_generator_test.cpp  signature_test.cpp
tests/audio/: byte_control_test.cpp  downsampler_test.cpp  wav_test.cpp
tests/utils/: base64_test.cpp  crc32_test.cpp  fft_test.cpp  ring_buffer_test.cpp
