[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibra"
version = "0.1.0"
description = "Python bindings for vibra music fingerprint generation"
readme = "python/README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
dependencies = [
    "requests>=2.31",
]
authors = [
    { name = "BayernMuller" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: C++",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

[tool.setuptools]
package-dir = { "" = "python/src" }

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.setuptools.package-data]
vibra = ["py.typed", "native/*"]
